--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,15 +1,14 @@
-.proj-row{
-    height: 4px;
-    display: flex;
-    justify-content: space-evenly;
-  }
-.proj-col{
-    font-size: medium;
-    color: bisque;
-    background-color: navy;
-    border: 5px solid black;
-    width: 160px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-  }
+.each-slide > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  height: 350px;
+}
+
+.each-slide span {
+  padding: 20px;
+  font-size: 20px;
+  background: #efefef;
+  text-align: center;
+}
