--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,14 +1,27 @@
-.each-slide > div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-size: cover;
-  height: 350px;
+.project-row{
+    display: flex;
+    justify-content: space-between;
 }
 
-.each-slide span {
-  padding: 20px;
-  font-size: 20px;
-  background: #efefef;
-  text-align: center;
+.grid-item1{
+    width: 25%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    padding: 10px;
+    
+  }
+  .grid-item {
+    border: 2px solid black;
+    background-color: #191970;
+    width: 250px;
+    height: 100px;
+    display: flex;
+    justify-content: space-around;
+   
 }
