--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,13 @@
 .col{
   font-size: large;
   color: black;
-  background-color: goldenrod;
-  border: 5px solid black;
+  background-color: #f1e278;
+  border: 5px outset grey;
   width: 200px;
   height: 40px;
   display: flex;
   justify-content: center;
 }
-
+.col:hover{
+  background-color: #ffc300;
+}
