--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -4,7 +4,7 @@
 }
 
 .grid-item1{
-    width: 25%;
+    width: 100%;
     height: 50px;
     display: flex;
     justify-content: center;
@@ -12,16 +12,19 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto;
     padding: 10px;
     
   }
   .grid-item {
-    border: 2px solid black;
-    background-color: #191970;
-    width: 250px;
-    height: 100px;
+    border: 5px outset;
+    background-color: #f0e783e8;
+    width: 300px;
+    height: 130px;
     display: flex;
     justify-content: space-around;
    
+}
+.projects{
+    font-weight: bold;
 }
