Finallized project waiting for approval.

--- a/src/styles/contactUs.css
+++ b/src/styles/contactUs.css
@@ -6,3 +6,8 @@
     display: flex;
     justify-content: center;
 }
+.contact-row1{
+    color: rgb(53, 53, 102);
+    display: flex;
+    justify-content: center;
+}
