--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -12,3 +12,14 @@
   background: #efefef;
   text-align: center;
 }
+.gallery-row{
+  background-color: black;
+  display: flex;
+  justify-content: center;
+}
+.gallery-grid-item1{
+  width: 100%;
+  height: 5px;
+  display: flex;
+  justify-content: center;
+}
